<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="bill_amount">Bill Amount</string>
    <string name="enter_bill_amount">Enter Bill Amount Here</string>
    <string name="service_ratings">Service Ratings</string>
    <string name="tip_percent">%s%% Tip Percent</string>
    <string name="tip_total">$%s Tip Total</string>
    <string name="bill_total">Bill Total</string>
    <string name="bill_total_result">$%s </string>

</resources>
