<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorGreen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBillAmount"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_bill_amount"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearance"
        android:textColorHighlight="@color/colorLightGrey"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"/>
    
    <View
        android:id="@+id/vRatingsButton"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/etBillAmount"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>
    
    <LinearLayout
        android:id="@+id/rlRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vRatingsButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibRegularService"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreen"
            android:src="@drawable/baseline_mood_bad_white_18dp"/>

        <ImageButton
            android:id="@+id/ibGoodSrvice"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreen"
            android:src="@drawable/baseline_sentiment_satisfied_white_18dp"/>

        <ImageButton
            android:id="@+id/ibExcellentService"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_buttons"
            android:layout_weight="1"
            android:backgroundTint="@color/colorGreen"
            android:src="@drawable/baseline_mood_white_18dp"/>

    </LinearLayout>

    <View
        android:id="@+id/vRatingSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>

    <TextView
        android:id="@+id/tvServiceRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vRatingSeparator"
        android:text="@string/service_ratings"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:textAppearanceMedium"/>

    <LinearLayout
        android:id="@+id/llTipInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvServiceRating"
        android:orientation="horizontal"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tvTipPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:text="@string/tip_percent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvTipAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:text="@string/tip_total"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <View
        android:id="@+id/vBillSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/llTipInformation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>

    <TextView
        android:id="@+id/tvBillTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_total"
        android:layout_below="@id/vBillSeparator"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tvBillTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_total_result"
        android:layout_below="@id/tvBillTotal"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:textAppearanceLarge"
        android:textAllCaps="true"/>

</RelativeLayout>